--- a/.github/workflows/dependabot-notifications.yml
+++ b/.github/workflows/dependabot-notifications.yml
@@ -31,4 +31,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-      run: python scripts/dependabot_notifier.py --repos "dependabot/dependabot-core" "another/repository" "example/repo"
+        REPOSITORIES: |
+          [
+            "dependabot/dependabot-core",
+            "josephabonasara/gitconnect",
+            "josephabonasara/QuickApply"
+          ]
+      run: python scripts/dependabot_notifier.py
