--- a/.github/workflows/dependabot-notifications.yml
+++ b/.github/workflows/dependabot-notifications.yml
@@ -1,5 +1,9 @@
 name: Notify Dependabot PRs
 
+defaults:
+  run:
+    working-directory: ./scripts
+
 on:
   workflow_dispatch:  # Allow manual trigger
   schedule:
@@ -10,31 +14,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    # Step 2: Set up Python
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    # Step 1: Use the public action
+    - name: Notify Dependabot PRs
+      uses: ./.github/actions/dependabot-notifications/action.yml
       with:
-        python-version: "3.12"
-
-    # Step 3: Install dependencies
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    # Step 4: Run the script
-    - name: Run Dependabot Notifier
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-        REPOSITORIES: |
+        slack-token: ${{ secrets.SLACK_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        slack-channel: "#dependabot-notifications"
+        repositories: |
           [
             "dependabot/dependabot-core",
             "josephabonasara/gitconnect",
             "josephabonasara/QuickApply"
           ]
-      run: python scripts/dependabot_notifier.py
