--- a/.github/workflows/dependabot-notifications.yml
+++ b/.github/workflows/dependabot-notifications.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Notify Dependabot PRs
-      uses: ./.github/actions/dependabot-notifications/action.yml
+      uses: ./.github/actions/dependabot-notifications
       with:
         slack-token: ${{ secrets.SLACK_TOKEN }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
