--- a/.github/actions/dependabot-notifications/action.yml
+++ b/.github/actions/dependabot-notifications/action.yml
@@ -26,12 +26,14 @@ runs:
         python-version: "3.12"
 
     - name: Install dependencies
+      shell: bash
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Run Dependabot Notifier
       run: python scripts/dependabot_notifier.py
+      shell: bash
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }}
         SLACK_TOKEN: ${{ inputs.slack-token }}
