--- a/.github/actions/dependabot-notifications/action.yml
+++ b/.github/actions/dependabot-notifications/action.yml
@@ -29,7 +29,7 @@ runs:
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r ./.github/actions/dependabot-notifications/requirements.txt
 
     - name: Run Dependabot Notifier
       run: python scripts/dependabot_notifier.py
