--- a/.github/workflows/dependabot-notifications.yml
+++ b/.github/workflows/dependabot-notifications.yml
@@ -1,10 +1,10 @@
 name: Notify Dependabot PRs
 
 on:
-  workflow_dispatch:  # Allow manual trigger
+  workflow_dispatch:
   schedule:
-    - cron: "0 9 * * *"  # Runs daily at 9 AM UTC
-
+    - cron: "0 12 * * *"  # Runs daily at 7 AM EST
+    
 jobs:
   notify-dependabot-prs:
     runs-on: ubuntu-latest
