--- a/.github/actions/dependabot-notifications/action.yml
+++ b/.github/actions/dependabot-notifications/action.yml
@@ -3,7 +3,7 @@ description: A GitHub Action to send Dependabot PR notifications to a Slack chan
 author: Your Name
 inputs:
   slack-token:
-    description: "Slack bot token (xoxb-...) for sending notifications"
+    description: "Slack bot token for sending notifications"
     required: true
   github-token:
     description: "GitHub token to fetch Dependabot PRs"
@@ -17,23 +17,18 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Check out the code
-      uses: actions/checkout@v3
-
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: "3.12"
 
     - name: Install dependencies
-      shell: bash
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-      working-directory: ./.github/actions/dependabot-notifications  # Always relative to the reusable action
+        pip install -r .github/actions/dependabot-notifications/requirements.txt
 
     - name: Run Dependabot Notifier
-      run: python ./.github/actions/dependabot-notifications/scripts/dependabot_notifier.py
+      run: python .github/actions/dependabot-notifications/scripts/dependabot_notifier.py
       shell: bash
       env:
         GITHUB_TOKEN: ${{ inputs.github-token }}
