--- a/.github/actions/dependabot-notifications/action.yml
+++ b/.github/actions/dependabot-notifications/action.yml
@@ -23,6 +23,7 @@ runs:
         python-version: "3.12"
 
     - name: Install dependencies
+      shell: bash
       run: |
         python -m pip install --upgrade pip
         pip install -r .github/actions/dependabot-notifications/requirements.txt
